css/style.css
.element{
  width: 320px;
  height: 320px;
  float: left;
   border: 2px solid #8B0000;
   border-radius: 500px;
  background-color: #B21B00;
      position: absolute;
    left: 0px;
    top: 0px;
    z-index: -1;
  box-shadow: 0 0 5px 10px #dddddd;

}
.leaf{
  width: 100px;
  padding: 20px;
    position: absolute;
    left: 0px;
    top: 0px;
    z-index: -1;

}

.stalk{
  width: 20px;
  height: 20px;
  float: left;
   border: 2px solid #003c00;
   border-radius: 500px;
  background-color: green;
  margin:55px;


}

body
{
  background-color: #fcfcfc;
}
.tomato {
  position: absolute;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100px;
  height: 100px;
  padding: 50px 30px 50px 15%;

}


p{
  margin-top: 135px;
  margin-left: 85px;
  font-size: 70px;
  color: white;
  z-index: 1;

}
.button {
  border-radius: 50%;
  margin: 3px;
  height: 50px;
  width: 50px;
  background-color:  #B21B00;
  color: white;
  font-size:12px;

}
.button:focus {
  outline: black;
}




#myButtons{
  position: relative;
  top: -80px;
  padding: 8px;

  margin-left: 45px;
  display: flex;
}

